# task_for_bewise

./: README.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2023_10_13_1652-282d2176c10b_initial.py
backend/application/: database.py  exceptions.py  main.py  models.py  settings.py
backend/application/questions/: managers.py  models.py  schemas.py  utils.py  views.py
bewise-infra/: .env.template  docker-compose.yml
