[tool.poetry]
name = "application"
version = "0.1.0"
description = "Тестовое задание"
authors = ["Смелов Илья <https://github.com/PivnoyFei>"]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.0"
asyncpg = "^0.27.0"
fastapi = "^0.100.1"
pydantic = {extras = ["email"], version = "^2.1.1"}
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.15"
uvicorn = "^0.22.0"
requests = "^2.31.0"
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
wrap_length = 100
include_trailing_comma = true
use_parentheses = true
skip = [".gitignore", ".dockerignore", "alembic"]
extend_skip = ["_version.py", "versioneer.py", "__init__.py"]
extend_skip_glob = ["*venv*/*"]

[tool.black]
line-length = 100
extend-exclude = '(.*\/_version.py|.*venv.*\/|.*alembic.*\/.*)'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
